Unit Tests for ProductService, OrderService and JwtService. Karate integration tests for controllers.